--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
   <body>
     <div ng-app="">
  	<p>名字 : <input type="text" ng-model="name"></p>
- 	<h1>Hello {{name}}</h1>
-</div>
+      <h1><span>Hello {{name]}}</span></h1>
+   </div>
     <table>
       <tr>
         <td style= "width:30%;">
