--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
   </head>
 
   <body>
-    <div ng-app="">
+   <div ng-app="">
  	<p>名字 : <input type="text" ng-model="name"></p>
       <h1><span>Hello {{name]}}</span></h1>
+      <span ng-bind="name"></span>
    </div>
     <table>
       <tr>
