change upload code

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
    <input type="text" ng-model="yourName" placeholder="Enter a name here">
    <hr>
    <h1>Hello {{yourName}}!</h1>
+   <span><a href="upload.html">upload page</a></span>
  </div>
     
     
